--- a/CSS/main.css
+++ b/CSS/main.css
@@ -60,7 +60,7 @@ button{
   text-decoration: none;
   border: none;
   padding: 15px 25px;
-  background-color: #2ECCFA;
+  background-color: #BDBDBD;
   color: #fff;
   border-radius: 3px;
   font-family: courier;
